# SlicerExampleProgram

./: README.md
BV4_Student/: CMakeLists.txt
BV4_Student/Example_Program/: CMakeLists.txt  Example_Program.py
BV4_Student/Example_Program/Resources/UI/: Example_Program.ui
